test/spec_vectors/func/fail/module_17.wat
(module (func $f (drop (ref.func $g))) (func $g (type 4)) (elem declare func $g))